tests/reference/asr-test_str_slicing4-a0c7a69.stderr
semantic error: slice step cannot be zero
 --> tests/errors/test_str_slicing4.py:4:17
  |
4 |     print(s[0:1:0])
  |                 ^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
